/*
 #### by chenqiao
*/

syntax = "proto3";

option go_package = "github.com/hyperledger/fabric/protos/peer";

package protos;

import "google/protobuf/timestamp.proto";

service statusPeer {
    rpc ProcessMessage(ChannelMessage) returns (MessageOutput) {}    
}

message QueryBlocks{
    uint64 BlockIndex = 1;
    string ChannelID = 2;
}

service queryPeer{
    rpc QueryMessage(QueryBlocks) returns (Mblock){}
}

message ChannelMessage{
    repeated MessageInput ChannelInput = 1;
}

message MessageInput{
    string PeerIp = 1;
    uint64 Height = 2;
    string PeerName = 3;
    repeated Mblock Mblocks = 4;
    string ChannelID = 5;
}

message Mblock{
    MblockHeader Header = 1;
    MblockData Data = 2;
    MblockMetadata Metadata = 3;
}

message MblockHeader {
    uint64 Number = 1; // The position in the blockchain
    string PreviousHash = 2; // The hash of the previous block header
    string DataHash = 3; // The hash of the BlockData, by MerkleTree
    string NowHash = 4; // The current hash of the block header by chenqiao
}

message MblockData {
    repeated TransData Datas = 1;
}


message TransData{
    string Txid = 1;
    string ChainID = 2;
    google.protobuf.Timestamp Time = 3;
    string ChainCodeID = 4;
    string Payload = 5;
    string Type = 6;
    string Nonce = 7;
    string Signature = 8;
}

message MblockMetadata {
    repeated string Metadata = 1;
}

message MessageOutput{
    string output = 1;
}
